# RoboSDP

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  dto-schema-spec.md  patch.py  patch_collapsible.py  patch_log.py  patch_solver.py  robot-design-platform-codex-final.md  ui-dto-mapping-and-schema-samples.md
apps/desktop-qt/: AppBootstrap.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  RoboSDPDesktop.rc  VtkSceneWidget.h  main.cpp
apps/desktop-qt/resources/: desktop.qrc
apps/desktop-qt/source/: AppBootstrap.cpp  GlobalSaveResultDialog.h  ProjectEmptyStateWidget.cpp  ProjectEmptyStateWidget.h  ProjectWelcomeWidget.h  RobotVtkView.h  VtkSceneBuilder.cpp  VtkSceneWidget.cpp  main.cpp  qcustomplot.cpp  qcustomplot.h
apps/vtk-smoke/: CMakeLists.txt  README.md  VtkSmokeWindow.cpp  VtkSmokeWindow.h  main.cpp
core/config/: AppConfig.h  AppConfigLoader.cpp  AppConfigLoader.h  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h
core/infrastructure/: CMakeLists.txt  ProjectDirtyDependencyGraph.cpp  ProjectDirtyDependencyGraph.h  ProjectManager.cpp  ProjectManager.h  ProjectSaveCoordinator.cpp  ProjectSaveCoordinator.h
core/logging/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  LogMessage.h  Logger.cpp  Logger.h
core/repository/: CMakeLists.txt  IJsonRepository.h  LocalJsonRepository.cpp  LocalJsonRepository.h  ProjectService.cpp  ProjectService.h
core/schema/: CMakeLists.txt  ModuleValidationRegistry.cpp  ModuleValidationRegistry.h  ProjectReferenceChecker.cpp  ProjectReferenceChecker.h  ProjectStructureChecker.cpp  ProjectStructureChecker.h  SchemaDtoConsistencyChecker.cpp  SchemaDtoConsistencyChecker.h  ValidationMessage.h  ValidationResult.h
modules/dynamics/: CMakeLists.txt  mv1.bat
modules/dynamics/adapter/: IDynamicsBackendAdapter.h  PinocchioDynamicsBackendAdapter.h
modules/dynamics/dto/: DynamicModelDto.h  DynamicsResultDto.h
modules/dynamics/persistence/: DynamicJsonStorage.cpp
modules/dynamics/service/: DynamicsService.cpp  DynamicsService.h
modules/dynamics/source/: DynamicJsonStorage.cpp  DynamicJsonStorage.h  DynamicModelDto.h  DynamicsService.cpp  DynamicsService.h  DynamicsWidget.cpp  IDynamicsBackendDiagnosticsAdapter.h  PinocchioDynamicsBackendAdapter.cpp  TimeParameterizationSkeleton.cpp
modules/dynamics/trajectory/: BenchmarkTrajectoryFactory.cpp  BenchmarkTrajectoryFactory.h  TimeParameterizationSkeleton.h
modules/dynamics/ui/: DynamicsWidget.cpp  DynamicsWidget.h
modules/kinematics/: CLAUDE.md  CMakeLists.txt
modules/kinematics/adapter/: AnalyticalIkSolverAdapter.cpp  AnalyticalIkSolverAdapter.h  ComputeSvdMetrics.cpp  ComputeSvdMetrics.h  IIkSolverAdapter.h  IKinematicBackendAdapter.h  IKinematicBackendDiagnosticsAdapter.h  PinocchioIkSolverAdapter.cpp  PinocchioIkSolverAdapter.h  PinocchioKinematicBackendAdapter.cpp  PinocchioKinematicBackendAdapter.h  PinocchioKinematicBackendAdapterInternal.h  PinocchioKinematicBackendAdapter_Analysis.cpp
modules/kinematics/domain/: KinematicModelStatePolicy.cpp  KinematicModelStatePolicy.h
modules/kinematics/dto/: KinematicBackendBuildContextDto.h  KinematicModelDto.h  KinematicSolverResultDto.h  UnifiedRobotModelSnapshotDto.h  UrdfPreviewSceneDto.h
modules/kinematics/persistence/: KinematicJsonStorage.cpp  KinematicJsonStorage.h
modules/kinematics/service/: KinematicsService.Model.cpp  KinematicsService.Persistence.cpp  KinematicsService.cpp  KinematicsService.h  KinematicsServiceInternal.h
modules/kinematics/ui/: KinematicsWidget.cpp  KinematicsWidget.h
modules/planning/: CMakeLists.txt
modules/planning/adapter/: MoveItGrpcAdapter.cpp  MoveItGrpcAdapter.h  MoveItGrpcAdapterGrpcClient.cpp
modules/planning/dto/: PlanningRequestDto.h  PlanningResponseDto.h  PlanningSceneDto.h  PlanningVerificationResultDto.h
modules/planning/persistence/: PlanningJsonStorage.cpp  PlanningJsonStorage.h
modules/planning/service/: PlanningVerificationService.cpp  PlanningVerificationService.h
modules/planning/ui/: PlanningWidget.cpp  PlanningWidget.h
modules/requirement/: CMakeLists.txt
modules/requirement/dto/: RequirementModelDto.h
modules/requirement/persistence/: RequirementJsonStorage.cpp  RequirementJsonStorage.h
modules/requirement/service/: KukaRequirementTemplateProvider.cpp  KukaRequirementTemplateProvider.h  RequirementService.cpp  RequirementService.h  RequirementTemplateCatalog.cpp  RequirementTemplateCatalog.h
modules/requirement/ui/: RequirementWidget.cpp  RequirementWidget.h
modules/requirement/validator/: RequirementValidator.cpp  RequirementValidator.h
modules/scheme/: CMakeLists.txt
modules/scheme/dto/: SchemeAggregateDto.h  SchemeExportDto.h  SchemeSnapshotDto.h
modules/scheme/persistence/: SchemeJsonStorage.cpp  SchemeJsonStorage.h
modules/scheme/service/: SchemeExportService.cpp  SchemeExportService.h  SchemeSnapshotService.cpp  SchemeSnapshotService.h
modules/scheme/ui/: SchemeWidget.cpp  SchemeWidget.h
modules/selection/: CMakeLists.txt
modules/selection/catalog/: JsonComponentCatalog.cpp  JsonComponentCatalog.h  Stage1ComponentCatalog.cpp  Stage1ComponentCatalog.h
modules/selection/dto/: DriveTrainSelectionDto.h  MotorSelectionDto.h  ReducerSelectionDto.h
modules/selection/persistence/: SelectionJsonStorage.cpp  SelectionJsonStorage.h
modules/selection/service/: DriveTrainMatchingService.cpp  DriveTrainMatchingService.h  MotorSelectionService.cpp  MotorSelectionService.h  ReducerSelectionService.cpp  ReducerSelectionService.h
modules/selection/ui/: SelectionWidget.cpp  SelectionWidget.h
modules/topology/: CMakeLists.txt  mv2.bat
modules/topology/dto/: RobotTopologyModelDto.h  TopologyRecommendationDto.h
modules/topology/persistence/: TopologyJsonStorage.cpp
modules/topology/service/: TopologyService.cpp  TopologyTemplateLoader.cpp  TopologyTemplateLoader.h
modules/topology/source/: RobotTopologyModelDto.h  TopologyJsonStorage.cpp  TopologyJsonStorage.h  TopologyService.cpp  TopologyService.h  TopologyTemplateLoader.cpp  TopologyTemplateLoader.h  TopologyValidator.cpp  TopologyValidator.h  TopologyWidget.cpp  (+1 more)
(+199 files in other folders)
